building heights and snow holding problem